--- a/index.html
+++ b/index.html
@@ -70,6 +70,15 @@
         </nav>
       </div>
     </aside>
+    <header class="header">
+      <div class="header__wrapper">
+        <h1>Развлечения</h1>
+        <div class="input input--icon input--icon-search">
+          <input type="text" placeholder="Какой магазин вам нужен?">
+        </div>
+      </div>
+    </header>
+    <!-- <svg><use xlink:href="./img/icon/sprite.svg#car" /></svg> -->
 
     <script src="./js/script.js"></script>
 </body>
