rename page wrapper to container

--- a/index.html
+++ b/index.html
@@ -70,16 +70,19 @@
         </nav>
       </div>
     </aside>
-    <div class="page__wrapper">
       <header class="header">
-        <div class="header__wrapper">
-          <h1>Развлечения</h1>
-          <div class="input input--icon input--icon-search">
-            <input type="text" placeholder="Какой магазин вам нужен?">
+        <div class="container">
+          <div class="header__wrapper">
+            <h1>Развлечения</h1>
+            <div class="input input--icon input--icon-search">
+              <input type="text" placeholder="Какой магазин вам нужен?">
+            </div>
           </div>
         </div>
       </header>
-    </div>
+      <main class="main">
+        
+      </main>
     <!-- <svg><use xlink:href="./img/icon/sprite.svg#car" /></svg> -->
 
     <script src="./js/script.js"></script>
