--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
     <aside class="sidebar">
       <div class="sidebar__wrapper">
         <div class="sidebar__menu">
-          <svg class="icon nav__icon">
-            <use xlink:href="./img/icon/sprite.svg#menu" />
-          </svg>
+          <button>
+            <svg class="icon nav__icon">
+              <use xlink:href="./img/icon/sprite.svg#menu" />
+            </svg>
+          </button>
         </div>
         <div class="logo sidebar__logo">
           <div class="logo__img">
