styles for opened and closed button

--- a/index.html
+++ b/index.html
@@ -15,8 +15,11 @@
       <div class="sidebar__wrapper">
         <div class="sidebar__menu">
           <button>
-            <svg class="icon nav__icon">
+            <svg class="icon nav__icon nav__icon--menu">
               <use xlink:href="./img/icon/sprite.svg#menu" />
+            </svg>
+            <svg class="icon nav__icon nav__icon--close">
+              <use xlink:href="./img/icon/sprite.svg#close" />
             </svg>
           </button>
         </div>
