add cards layout

--- a/index.html
+++ b/index.html
@@ -86,7 +86,252 @@
         </div>
       </header>
       <main class="main">
-        
+        <div class="container">
+          <div class="cards">
+            <ul class="cards__list">
+              <li class="cards__item card">
+                <div class="card__content">
+                  <div class="card__header">
+                    <h3>Пробка на мира</h3>
+                    <p>Вечер на двоих</p>
+                  </div>
+                  <div class="card__info">
+                    <span>50%</span>
+                    <p>Скидка</p>
+                  </div>
+                </div>
+                <div class="card__image">
+                  <picture>
+                    <source media="(min-width: 1440px)" srcset="./img/coupon/desktop/wine.jpg">
+                    <source media="(min-width: 768px)" srcset="./img/coupon/tablet/wine.jpg">
+                    <source media="(min-width: 320px)" srcset="./img/coupon/mobile/wine.jpg">
+                    <img src="./img/coupon/desktop/wine.jpg" alt="wine">
+                  </picture>
+                </div>
+              </li>
+              <li class="cards__item card">
+                <div class="card__content">
+                  <div class="card__header">
+                    <h3>Кино и немцы</h3>
+                    <p>Бесплатный бокал пива</p>
+                  </div>
+                  <div class="card__info">
+                    <span>Варвар</span>
+                    <p>Промокод</p>
+                  </div>
+                </div>
+                <div class="card__image">
+                  <picture>
+                    <source media="(min-width: 1440px)" srcset="./img/coupon/desktop/beer.jpg">
+                    <source media="(min-width: 768px)" srcset="./img/coupon/tablet/beer.jpg">
+                    <source media="(min-width: 320px)" srcset="./img/coupon/mobile/beer.jpg">
+                    <img src="./img/coupon/desktop/beer.jpg" alt="beer">
+                  </picture>
+                </div>
+              </li>
+              <li class="cards__item card">
+                <div class="card__content">
+                  <div class="card__header">
+                    <h3>Valery cakes</h3>
+                    <p>Торт</p>
+                  </div>
+                  <div class="card__info">
+                    <span>30%</span>
+                    <p>Скидка</p>
+                  </div>
+                </div>
+                <div class="card__image">
+                  <picture>
+                    <source media="(min-width: 1440px)" srcset="./img/coupon/desktop/cake.jpg">
+                    <source media="(min-width: 768px)" srcset="./img/coupon/tablet/cake.jpg">
+                    <source media="(min-width: 320px)" srcset="./img/coupon/mobile/cake.jpg">
+                    <img src="./img/coupon/desktop/cake.jpg" alt="cake">
+                  </picture>
+                </div>
+              </li>
+              <li class="cards__item card">
+                <div class="card__content">
+                  <div class="card__header">
+                    <h3>Пробка на мира</h3>
+                    <p>Вечер на двоих</p>
+                  </div>
+                  <div class="card__info">
+                    <span>50%</span>
+                    <p>Скидка</p>
+                  </div>
+                </div>
+                <div class="card__image">
+                  <picture>
+                    <source media="(min-width: 1440px)" srcset="./img/coupon/desktop/wine.jpg">
+                    <source media="(min-width: 768px)" srcset="./img/coupon/tablet/wine.jpg">
+                    <source media="(min-width: 320px)" srcset="./img/coupon/mobile/wine.jpg">
+                    <img src="./img/coupon/desktop/wine.jpg" alt="wine">
+                  </picture>
+                </div>
+              </li>
+              <li class="cards__item card">
+                <div class="card__content">
+                  <div class="card__header">
+                    <h3>Кино и немцы</h3>
+                    <p>Бесплатный бокал пива</p>
+                  </div>
+                  <div class="card__info">
+                    <span>Варвар</span>
+                    <p>Промокод</p>
+                  </div>
+                </div>
+                <div class="card__image">
+                  <picture>
+                    <source media="(min-width: 1440px)" srcset="./img/coupon/desktop/beer.jpg">
+                    <source media="(min-width: 768px)" srcset="./img/coupon/tablet/beer.jpg">
+                    <source media="(min-width: 320px)" srcset="./img/coupon/mobile/beer.jpg">
+                    <img src="./img/coupon/desktop/beer.jpg" alt="beer">
+                  </picture>
+                </div>
+              </li>
+              <li class="cards__item card">
+                <div class="card__content">
+                  <div class="card__header">
+                    <h3>Valery cakes</h3>
+                    <p>Торт</p>
+                  </div>
+                  <div class="card__info">
+                    <span>30%</span>
+                    <p>Скидка</p>
+                  </div>
+                </div>
+                <div class="card__image">
+                  <picture>
+                    <source media="(min-width: 1440px)" srcset="./img/coupon/desktop/cake.jpg">
+                    <source media="(min-width: 768px)" srcset="./img/coupon/tablet/cake.jpg">
+                    <source media="(min-width: 320px)" srcset="./img/coupon/mobile/cake.jpg">
+                    <img src="./img/coupon/desktop/cake.jpg" alt="cake">
+                  </picture>
+                </div>
+              </li>
+              <li class="cards__item card">
+                <div class="card__content">
+                  <div class="card__header">
+                    <h3>Пробка на мира</h3>
+                    <p>Вечер на двоих</p>
+                  </div>
+                  <div class="card__info">
+                    <span>50%</span>
+                    <p>Скидка</p>
+                  </div>
+                </div>
+                <div class="card__image">
+                  <picture>
+                    <source media="(min-width: 1440px)" srcset="./img/coupon/desktop/wine.jpg">
+                    <source media="(min-width: 768px)" srcset="./img/coupon/tablet/wine.jpg">
+                    <source media="(min-width: 320px)" srcset="./img/coupon/mobile/wine.jpg">
+                    <img src="./img/coupon/desktop/wine.jpg" alt="wine">
+                  </picture>
+                </div>
+              </li>
+              <li class="cards__item card">
+                <div class="card__content">
+                  <div class="card__header">
+                    <h3>Кино и немцы</h3>
+                    <p>Бесплатный бокал пива</p>
+                  </div>
+                  <div class="card__info">
+                    <span>Варвар</span>
+                    <p>Промокод</p>
+                  </div>
+                </div>
+                <div class="card__image">
+                  <picture>
+                    <source media="(min-width: 1440px)" srcset="./img/coupon/desktop/beer.jpg">
+                    <source media="(min-width: 768px)" srcset="./img/coupon/tablet/beer.jpg">
+                    <source media="(min-width: 320px)" srcset="./img/coupon/mobile/beer.jpg">
+                    <img src="./img/coupon/desktop/beer.jpg" alt="beer">
+                  </picture>
+                </div>
+              </li>
+              <li class="cards__item card">
+                <div class="card__content">
+                  <div class="card__header">
+                    <h3>Valery cakes</h3>
+                    <p>Торт</p>
+                  </div>
+                  <div class="card__info">
+                    <span>30%</span>
+                    <p>Скидка</p>
+                  </div>
+                </div>
+                <div class="card__image">
+                  <picture>
+                    <source media="(min-width: 1440px)" srcset="./img/coupon/desktop/cake.jpg">
+                    <source media="(min-width: 768px)" srcset="./img/coupon/tablet/cake.jpg">
+                    <source media="(min-width: 320px)" srcset="./img/coupon/mobile/cake.jpg">
+                    <img src="./img/coupon/desktop/cake.jpg" alt="cake">
+                  </picture>
+                </div>
+              </li>
+              <li class="cards__item card">
+                <div class="card__content">
+                  <div class="card__header">
+                    <h3>Пробка на мира</h3>
+                    <p>Вечер на двоих</p>
+                  </div>
+                  <div class="card__info">
+                    <span>50%</span>
+                    <p>Скидка</p>
+                  </div>
+                </div>
+                <div class="card__image">
+                  <picture>
+                    <source media="(min-width: 1440px)" srcset="./img/coupon/desktop/wine.jpg">
+                    <source media="(min-width: 768px)" srcset="./img/coupon/tablet/wine.jpg">
+                    <source media="(min-width: 320px)" srcset="./img/coupon/mobile/wine.jpg">
+                    <img src="./img/coupon/desktop/wine.jpg" alt="wine">
+                  </picture>
+                </div>
+              </li>
+              <li class="cards__item card">
+                <div class="card__content">
+                  <div class="card__header">
+                    <h3>Кино и немцы</h3>
+                    <p>Бесплатный бокал пива</p>
+                  </div>
+                  <div class="card__info">
+                    <span>Варвар</span>
+                    <p>Промокод</p>
+                  </div>
+                </div>
+                <div class="card__image">
+                  <picture>
+                    <source media="(min-width: 1440px)" srcset="./img/coupon/desktop/beer.jpg">
+                    <source media="(min-width: 768px)" srcset="./img/coupon/tablet/beer.jpg">
+                    <source media="(min-width: 320px)" srcset="./img/coupon/mobile/beer.jpg">
+                    <img src="./img/coupon/desktop/beer.jpg" alt="beer">
+                  </picture>
+                </div>
+              </li>
+              <li class="cards__item card">
+                <div class="card__content">
+                  <div class="card__header">
+                    <h3>Valery cakes</h3>
+                    <p>Торт</p>
+                  </div>
+                  <div class="card__info">
+                    <span>30%</span>
+                    <p>Скидка</p>
+                  </div>
+                </div>
+                <div class="card__image">
+                  <picture>
+                    <source media="(min-width: 1440px)" srcset="./img/coupon/desktop/cake.jpg">
+                    <source media="(min-width: 768px)" srcset="./img/coupon/tablet/cake.jpg">
+                    <source media="(min-width: 320px)" srcset="./img/coupon/mobile/cake.jpg">
+                    <img src="./img/coupon/desktop/cake.jpg" alt="cake">
+                  </picture>
+                </div>
+              </li>
+            </ul>
+          </div>
+        </div>
       </main>
     <!-- <svg><use xlink:href="./img/icon/sprite.svg#car" /></svg> -->
 
